@@ -33,6 +33,7 @@ static void _GD_FreeD(DIRFILE* D)
     _GD_FreeE(D, D->entry[i], 1);
 
   for (j = 0; j < D->n_fragment; ++j) {
+    free(D->fragment[j].enc_data);
     free(D->fragment[j].prefix);
     free(D->fragment[j].suffix);
     free(D->fragment[j].bname);
