@@ -325,7 +325,8 @@ static int _GD_Delete(DIRFILE *D, gd_entry_t *E, unsigned int index,
       return -1;
     }
 
-    if ((*_gd_ef[E->e->u.raw.file[0].subenc].name)(D, E->e->u.raw.file,
+    if ((*_gd_ef[E->e->u.raw.file[0].subenc].name)(D,
+          D->fragment[E->fragment_index].enc_data, E->e->u.raw.file,
           E->e->u.raw.filebase, 0, 0))
     {
       free(del_list);
